--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MultiplicationTable"></activity>
+        <activity android:name=".Square"></activity>
+        <activity android:name=".GeometricString" />
+        <activity android:name=".ArithmeticString" />
+        <activity android:name=".QuadraticFunction" />
+        <activity android:name=".LinearFunction" />
+        <activity android:name=".MultiplicationTable" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
