--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Square"></activity>
+        <activity android:name=".Rectangle"></activity>
+        <activity android:name=".Square" />
         <activity android:name=".GeometricString" />
         <activity android:name=".ArithmeticString" />
         <activity android:name=".QuadraticFunction" />
